--- a/src/scss/components/paragraphs/_hero.scss
+++ b/src/scss/components/paragraphs/_hero.scss
@@ -25,7 +25,7 @@ $koro-height: 50px;
 
   .hero__title {
     margin-bottom: $spacing;
-    margin-top: $spacing-quadruple;
+    margin-top: $spacing;
   }
 
   .hero__title + .hero__cta {
@@ -545,7 +545,7 @@ $koro-height: 50px;
     padding-bottom: $spacing;
 
     @include breakpoint($breakpoint-m) {
-      padding-bottom: $spacing-quadruple;
+      padding-bottom: $spacing-triple;
     }
   }
 
@@ -691,6 +691,7 @@ $koro-height: 50px;
     align-items: center;
     color: $color-white;
     display: flex;
+    padding-top: $spacing-quadruple;
     position: relative;
     width: 100%;
     z-index: 2;
@@ -784,12 +785,14 @@ $koro-height: 50px;
   .hero__container {
     align-items: center;
     display: flex;
+    padding-bottom: $spacing;
     position: relative;
     width: 100%;
     z-index: 2;
 
     @include breakpoint($breakpoint-l) {
       min-height: 480px;
+      padding-bottom: $spacing-triple;
     }
   }
 
@@ -804,7 +807,7 @@ $koro-height: 50px;
 
   .hero__title {
     @include breakpoint($breakpoint-l) {
-      margin-top: 0;
+      margin-top: $spacing;
     }
   }
 
