--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -1,8 +1,9 @@
 $teaser-icon-size: 48px;
 
-.node--type-service {
+.service {
   .service__title {
     margin-bottom: $spacing-and-half;
+    margin-top: $spacing-double;
   }
 
   .service__short-desc {
@@ -29,17 +30,19 @@ $teaser-icon-size: 48px;
   }
 }
 
-.node--type-service--with-hero {
-  .service__title {
-    margin-top: $spacing-double;
-  }
+.service.service--view-mode-full {
+  .service__units:last-child {
+    // Make the keywords element go "under" the footer.
+    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
+    padding-bottom: $spacing-double + $footer-koro-height;
 
-  .container {
-    padding-top: 0;
+    @include breakpoint($breakpoint-l) {
+      padding-bottom: $spacing-quadruple + $footer-koro-height;
+    }
   }
 }
 
-.node--type-service--teaser {
+.service.service--view-mode-teaser {
   background-color: $color-white;
 
   .service__link {
@@ -72,18 +75,6 @@ $teaser-icon-size: 48px;
     position: absolute;
     transition: all .3s;
     width: $teaser-icon-size;
-  }
-}
-
-.node--type-service.node--view-mode-full {
-  .service__units:last-child {
-    // Make the keywords element go "under" the footer.
-    margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
-    padding-bottom: $spacing-double + $footer-koro-height;
-
-    @include breakpoint($breakpoint-l) {
-      padding-bottom: $spacing-quadruple + $footer-koro-height;
-    }
   }
 }
 
