--- a/templates/content/node--service--parent-service.html.twig
+++ b/templates/content/node--service--parent-service.html.twig
@@ -65,9 +65,7 @@
  *
  * @see template_preprocess_node()
  *
- * @todo Remove the id attribute (or make it a class), because if that gets
- *   rendered twice on a page this is invalid CSS for example: two lists
- *   in different view modes.
+ * @todo: Remove this template and merge it to the helfi_tpr module once parent/child templates are done.
  */
 #}
 
