--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -65,10 +65,10 @@ $teaser-icon-size: 48px;
   }
 
   .service__short-desc {
-    color: $color-black-50;
-    margin-top: $spacing-half;
+    @include font-size(18px, 24px);
+    margin-top: $spacing;
   }
-
+  
   .icon {
     bottom: $spacing;
     height: $teaser-icon-size;
@@ -110,10 +110,14 @@ $teaser-icon-size: 48px;
     padding: 0;
   }
 
-  .service__units__load-more-container {
+  .service__units__pager-button-wrapper {
     display: flex;
     justify-content: center;
     width: 100%;
+
+    .service__units__pager-button {
+      text-decoration: none;
+    }
 
     .hds-button {
       --background-color: transparent;
