--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -111,10 +111,6 @@
     }
   }
 
-  .address .country {
-    display: none;
-  }
-
   .phone {
     display: block;
     margin-bottom: $spacing-half;
@@ -289,21 +285,18 @@
   }
 
   .unit__info-row--address .address {
-    display: flex;
+    display: inline;
     margin-top: 0;
 
     .address-line1,
     .address-line2,
     .postal-code {
-      margin-right: 5px;
+      margin-right: 3px; // Some spacing between the address parts when they are displayed inline.
 
       &::after {
         content: ",";
+        margin-left: -2px; // Because of display inline there is automatically some extra spacing. This removes it.
       }
-    }
-
-    .country {
-      display: none;
     }
   }
 
