UHF-1493: On page view of the unit, show the address on separate lines

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -111,6 +111,12 @@
     }
   }
 
+  .address {
+    > * {
+      display: block;
+    }
+  }
+
   .phone {
     display: block;
     margin-bottom: $spacing-half;
