--- a/src/scss/layout/_layout-content.scss
+++ b/src/scss/layout/_layout-content.scss
@@ -7,3 +7,19 @@
     margin: 0 (-$spacing-double);
   }
 }
+
+.has-sidebar--first {
+  .layout-content {
+    @include breakpoint($breakpoint-l) {
+      margin: 0;
+      order: 2;
+      padding-left: $spacing;
+      width: 70%;
+    }
+
+    > article,
+    > .page-title {
+      margin: 0;
+    }
+  }
+}
