--- a/templates/block/block--footerbottomnavigation.html.twig
+++ b/templates/block/block--footerbottomnavigation.html.twig
@@ -32,7 +32,7 @@
  */
 #}
 {% set heading_id = attributes.id ~ '-menu'|clean_id %}
-<nav role="navigation" aria-labelledby="{{ heading_id }}"{{ attributes|without('role', 'aria-labelledby') }}>
+<nav role="navigation" {{ attributes|without('role', 'aria-labelledby') }}>
   {# Menu. #}
   {% block content %}
     {{ content }}
