--- a/templates/misc/icon.twig
+++ b/templates/misc/icon.twig
@@ -1,6 +1,7 @@
 {% if icons_path %}
-  <svg {% if label %} aria-labelledby="{{ icon }}" {% endif %} class="icon">
-    {% if label %} <title id="{{ icon }}">{{ label }}</title>  {% endif %}
+  {% set icon_id = icon ~ '-' ~ random() %}
+  <svg {% if label %} aria-labelledby="{{ icon_id }}" {% endif %} class="icon">
+    {% if label %}<title id="{{ icon_id }}">{{ label }}</title>{% endif %}
     <use xlink:href="{{ icons_path|trim }}#{{ icon }}"/>
   </svg>
 {% endif %}
