UHF-1046: Mobile size unit search styling

--- a/templates/paragraphs/paragraph--unit-search.html.twig
+++ b/templates/paragraphs/paragraph--unit-search.html.twig
@@ -52,7 +52,7 @@
         {% block container_content %}
           <div class="unit-search__header">
             {% if content.field_unit_search_title|render %}
-              <div class="unit-search__header__title">{{ content.field_unit_search_title }}</div>
+              <h2 class="unit-search__header__title">{{ content.field_unit_search_title }}</h2>
             {% endif %}
             {% if content.field_unit_search_description|render %}
               <div class="unit-search__header__description">{{ content.field_unit_search_description }}</div>
