UHF-1046: Styling unit search paragraph and unit teaser with iamge

--- a/src/scss/components/content/_service.scss
+++ b/src/scss/components/content/_service.scss
@@ -30,7 +30,7 @@ $teaser-icon-size: 48px;
   }
 }
 
-.service.service--view-mode-full {
+.service.service--full {
   .service__units:last-child {
     // Make the keywords element go "under" the footer.
     margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
@@ -42,7 +42,7 @@ $teaser-icon-size: 48px;
   }
 }
 
-.service.service--view-mode-teaser {
+.service.service--teaser {
   background-color: $color-white;
 
   .service__link {
@@ -68,7 +68,7 @@ $teaser-icon-size: 48px;
     @include font-size(18px, 24px);
     margin-top: $spacing;
   }
-  
+
   .icon {
     bottom: $spacing;
     height: $teaser-icon-size;
