--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -110,6 +110,21 @@
       margin-top: 0;
     }
   }
+
+  .address {
+    > * {
+      display: block;
+    }
+  }
+
+  .phone {
+    display: block;
+    margin-bottom: $spacing-half;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .unit__services {
@@ -118,7 +133,7 @@
   overflow: hidden;
   padding-bottom: $spacing-and-half;
 
-  .service.service--view-mode-teaser {
+  .service.service--teaser {
     margin-top: $spacing-and-half;
   }
 
@@ -209,7 +224,7 @@
   }
 }
 
-.unit.unit--view-mode-full {
+.unit.unit--full {
   .unit__services:last-child {
     // Make the keywords element go "under" the footer.
     margin-bottom: calc(-1 * (#{$footer-koro-height} + #{$spacing-triple}));
@@ -221,7 +236,7 @@
   }
 }
 
-.unit.unit--view-mode-teaser {
+.unit.unit--teaser {
   align-items: flex-start;
   background-color: $color-white;
   display: flex;
@@ -277,7 +292,32 @@
   }
 
   .unit__info-row--address .address {
+    display: inline;
     margin-top: 0;
+
+    .address-line1,
+    .address-line2,
+    .postal-code {
+      margin-right: 3px; // Some spacing between the address parts when they are displayed inline.
+
+      &::after {
+        content: ",";
+        margin-left: -2px; // Because of display inline there is automatically some extra spacing. This removes it.
+      }
+    }
+  }
+
+  .unit__info-row--phone .phones {
+    display: flex;
+    flex-direction: column;
+
+    .phone {
+      margin-top: $spacing-half;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
   }
 
   .unit__link {
@@ -294,6 +334,16 @@
 
     .icon {
       --icon-proportions: 48px;
+    }
+  }
+}
+
+.unit.unit--teaser-with-image {
+  .unit__image {
+    margin: (-$spacing-and-half) (-$spacing-and-half) $spacing-double;
+
+    @include breakpoint($breakpoint-m) {
+      margin: (-$spacing-double) $spacing-double (-$spacing-double) (-$spacing-triple);
     }
   }
 }
