--- a/src/scss/layout/_layout-main-wrapper.scss
+++ b/src/scss/layout/_layout-main-wrapper.scss
@@ -1,8 +1,7 @@
 .has-sidebar--first .layout-main-wrapper {
   @include breakpoint($breakpoint-l) {
     display: flex;
+    flex-wrap: wrap;
     margin: 0 auto;
-    max-width: $content-area-wrapper-width-max;
-    padding: 0 $spacing-double;
   }
 }
