--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -6,6 +6,10 @@
     margin-top: $spacing-quadruple - $spacing-and-half;
   }
 
+  &:first-child {
+    margin-top: 0;
+  }
+
   .text__text-content {
     max-width: $content-width-max;
 
@@ -14,11 +18,7 @@
     }
 
     > *:first-child {
-      margin-top: $spacing-double - $spacing-and-half;
-
-      @include breakpoint($breakpoint-m) {
-        margin-top: $spacing-quadruple - $spacing-and-half;
-      }
+      margin-top: 0;
     }
 
     > p:first-child {
