--- a/src/scss/layout/_main-content.scss
+++ b/src/scss/layout/_main-content.scss
@@ -1,4 +1,4 @@
-.main-content {
+.has-sidebar--first .main-content {
   @include breakpoint($breakpoint-l) {
     display: flex;
     margin: 0 auto;
