UHF-1280: Theming for the secondary content.

--- a/modules/hdbt_content/templates/secondary-content-block.html.twig
+++ b/modules/hdbt_content/templates/secondary-content-block.html.twig
@@ -1,5 +1,7 @@
 {% if paragraphs %}
-  {% for paragraph in paragraphs %}
-    {{ drupal_entity('paragraph', paragraph.target_id) }}
-  {% endfor %}
+  <div class="secondary-content-wrapper">
+    {% for paragraph in paragraphs %}
+      {{ drupal_entity('paragraph', paragraph.target_id) }}
+    {% endfor %}
+  </div>
 {% endif %}
