UHF-1550: Added temporary styles for the paragraphs under unit & service.

--- a/modules/hdbt_content/templates/secondary-content-block.html.twig
+++ b/modules/hdbt_content/templates/secondary-content-block.html.twig
@@ -1,5 +1,5 @@
 {% if paragraphs %}
-  <div class="secondary-content-wrapper">
+  <div class="secondary-content layout-content">
     {% for paragraph in paragraphs %}
       {{ drupal_entity('paragraph', paragraph.target_id) }}
     {% endfor %}
