--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -60,3 +60,14 @@
     }
   }
 }
+
+// Sidebar layout.
+.has-sidebar.enriched-content, // TODO: Clean up when unit sidebar block has been created.
+.has-sidebar .main-content {
+
+  .text__text-content {
+    @include breakpoint($breakpoint-m) {
+      padding-left: 0;
+    }
+  }
+}
