--- a/templates/content/tpr-unit.html.twig
+++ b/templates/content/tpr-unit.html.twig
@@ -15,6 +15,8 @@
   {% endblock sidebar_block %}
 
   {% block main_content %}
-    {{ content.field_content }}
+    <div class="enriched-content has-sidebar">
+      {{ content.field_content }}
+    </div>
   {% endblock main_content %}
 {% endembed %}
