--- a/src/scss/components/paragraphs/_text.scss
+++ b/src/scss/components/paragraphs/_text.scss
@@ -62,9 +62,7 @@
 }
 
 // Sidebar layout.
-.has-sidebar.enriched-content, // TODO: Clean up when unit sidebar block has been created.
-.has-sidebar .main-content {
-
+.has-sidebar.enriched-content { // TODO: Clean up when unit sidebar block has been created.
   .text__text-content {
     @include breakpoint($breakpoint-m) {
       padding-left: 0;
