--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -16,8 +16,7 @@
 }
 
 // Sidebar layout.
-.has-sidebar.enriched-content, // TODO: Clean up when unit sidebar block has been created.
-.has-sidebar .main-content {
+.has-sidebar.enriched-content { // TODO: Clean up when unit sidebar block has been created.
   .container {
     @include breakpoint($breakpoint-m) {
       padding: $spacing-and-half 0 0;
